Afegida teoria a Teoria de Galois i a Probabilitat

--- a/Apunts.tex
+++ b/Apunts.tex
@@ -172,6 +172,7 @@
 \newcommand{\implicatper}{\impliedby}
 
 \newcommand{\obert}[1]{\mathcal{#1}}
+\newcommand{\algebra}[1]{\mathcal{#1}}
 \newcommand{\tancat}[1]{\obert{#1}}
 \newcommand{\base}[1]{\mathcal{#1}}
 \newcommand{\CampsVectorials}[1]{\mathfrak{#1}}
@@ -188,6 +189,9 @@
 \newcommand{\basecanonica}{\base{C}}
 \newcommand{\Lie}{\mathcal{L}}
 \newcommand{\ev}{\mathrm{ev}}
+
+\newcommand{\heads}{\mathrm{H}}
+\newcommand{\tails}{\mathrm{T}}
 
 \newcommand{\RR}{\field{R}}
 \newcommand{\QQ}{\field{Q}}
@@ -516,6 +520,7 @@
 	\subfile{parts/EA.tex}
 	\subfile{parts/MN.tex}
 %	\book{Tercer curs}
+	\subfile{parts/Probabilitat.tex}
 	\subfile{parts/Galois.tex}
 	\subfile{parts/Topologia.tex}
 	\subfile{parts/EDOS1.tex}
