Afegida teoria a Teoria de Galois

--- a/Apunts.tex
+++ b/Apunts.tex
@@ -202,6 +202,7 @@
 \newcommand{\KK}{\field{K}}
 \newcommand{\FF}{\field{F}}
 \newcommand{\EE}{\field{E}}
+\newcommand{\LL}{\field{L}}
 
 \makeatletter
 	\def\prodesc{\@ifnextchar[{\@prodescwith}{\@prodescwithout}}
