--- a/NovoTeX/Main.tex
+++ b/NovoTeX/Main.tex
@@ -420,7 +420,7 @@
 }
 \newcommand{\tercer}{
 	\book{Tercer curs}
-	\subfile{BodyMatter/3r/Galois.tex}
+%	\subfile{BodyMatter/3r/Galois.tex}
 	\subfile{BodyMatter/3r/Topologia.tex}
 	\subfile{BodyMatter/3r/EDOS1.tex}
 	\subfile{BodyMatter/3r/Complexa.tex}
