Afegida teoria sense demoststracions a Teoria de Galois fins a el cos de descomposició d'una família de polinomis

--- a/Apunts.tex
+++ b/Apunts.tex
@@ -143,6 +143,7 @@
 \DeclareMathOperator{\II}{\rom{2}}
 \DeclareMathOperator{\divergencia}{div}
 \DeclareMathOperator{\Irr}{Irr}
+\DeclareMathOperator{\Gal}{Gal}
 
 \DeclareMathOperator*{\suport}{Supp}
 
@@ -165,6 +166,7 @@
 \newcommand{\rapidesa}{v}
 \newcommand{\transposta}{\top}
 \newcommand{\extensio}{/}
+\newcommand{\morfismemisterios}{\hat{f}}
 
 \newcommand{\sii}{\iff}
 \newcommand{\Sii}{\Longleftrightarrow}
