--- a/parts/EA.tex
+++ b/parts/EA.tex
@@ -2159,7 +2159,7 @@
 	\end{lemma}
 	\begin{theorem}
 		\label{thm:cos de fraccions}
-		Sigui \(D\) un domini d'integritat. Aleshores \(\cosdefraccions(D)\) és un cos.
+		Sigui \(D\) un domini d'integritat. Aleshores \(\cosdefraccions(D)\) és el mínim cos que conté~\(D\).
 %		Sigui \(D\) un domini d'integritat amb la suma \(+\) i el producte \(\cdot\). Aleshores \(\cosdefraccions(D)\) és un cos amb la suma \(+\) i el producte \(\cdot\).
 		\begin{proof}
 			%TODO
