Afegida una mica de teoria al principi de probabilitat

--- a/Apunts.tex
+++ b/Apunts.tex
@@ -116,6 +116,7 @@
 \DeclareMathOperator{\cont}{cont}
 \DeclareMathOperator{\grau}{grau}
 \DeclareMathOperator{\Id}{Id}
+\DeclareMathOperator{\parts}{\mathcal{P}}
 \DeclareMathOperator{\GrupSimetric}{S}
 \DeclareMathOperator{\Mou}{M}
 \DeclareMathOperator{\ordre}{\omicron}
